@@ -101,15 +101,13 @@
     <chapter name="Frequently asked Questions">
         <faq>
             <question>How to move a wire?</question>
-            <answer>Select on of the end points with the rectangular selection. The move this point using the mouse.</answer>
-        </faq>
-        <faq>
-            <question>How to select a single wire?</question>
-            <answer>You have to select the end points of the wire using the rectangular selection.</answer>
+            <answer>Select on of the end points with the rectangular selection. The move this point using the mouse.
+                You can also select a wire with the right mouse button.</answer>
         </faq>
         <faq>
             <question>How to delete a wire?</question>
-            <answer>Select on of the end points and press <e>DEL</e> or click on the trashcan.</answer>
+            <answer>Select on of the end points and press <e>DEL</e> or click on the trashcan.
+                You can also select a wire with the right mouse button.</answer>
         </faq>
         <faq>
             <question>How to move a component including all the connected wires?</question>
