@@ -1,8 +1,10 @@
 Release Notes
 
 planned as v0.10
-- user can select the expressions representation format in the settings dialog
-- better formatting of minimized expressions
+- User can select the expressions representation format in the settings dialog.
+- Better formatting of minimized expressions.
+- Mouse actions can be canceled by the ESC key.
+- With the right mouse button you can now select wires.
 
 v0.9, released on 03. Feb 2017
 - improved documentation
